resume download trying again

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div id="lead-content">
             <h1>Finn Childress</h1>
             <h2>BS of Computer Science Student</h2>
-            <a class="btn-rounded-white" href="./resumes/Finn_Childress_Resume.pdf" download>Download Resume</a>
+            <a class="btn-rounded-white" href="/resumes/Finn_Childress_Resume.pdf" download>Download Resume</a>
+            <a class="btn-rounded-white" href="Finn_Childress_Resume.pdf" download>Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
