--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
             <h1>Finn Childress</h1>
             <h2>BS of Computer Science Student</h2>
             <a class="btn-rounded-white" href="/resumes/Finn_Childress_Resume.pdf" download>Download Resume</a>
-            <a class="btn-rounded-white" href="Finn_Childress_Resume.pdf" download>Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -74,9 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Previous Software Engineering Intern at Viasat Inc. in Carlsbad, CA <br>
+                        Currently manage an online gaming business (Advancius) that uses cloud services and SQL  databases to provide a multiplayer gaming experience to users.<br>
+                        Collaborated to create multiple mobile apps and win hackathon awards<br>
+                        Accomplished CAD designer<br>
+                        2nd in CA Club Wrestling State Tournament (138 lbs)
                     </p>
                 </div>
             </div>
