--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Finn Childress</h1>
-            <h2>BS of Computer Science Student</h2>
+            <h2>Computer Science Major at Cal Poly SLO</h2>
             <a class="btn-rounded-white" href="/resumes/Finn_Childress_Resume.pdf" download>Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,11 +73,14 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Previous Software Engineering Intern at Viasat Inc. in Carlsbad, CA <br>
-                        Currently manage an online gaming business (Advancius) that uses cloud services and SQL  databases to provide a multiplayer gaming experience to users.<br>
-                        Collaborated to create multiple mobile apps and win hackathon awards<br>
-                        Accomplished CAD designer<br>
-                        2nd in CA Club Wrestling State Tournament (138 lbs)
+                        <ul>
+                            <li>Second year BS of Computer Science Major at California Polytechnic Institute, San Luis Obispo</li>
+                            <li>Previous Software Engineering Intern at Viasat Inc. in Carlsbad, CA</li>
+                            <li>Currently manage an online gaming business (Advancius) that uses cloud services and SQL databases to provide a multiplayer gaming experience to users.</li>
+                            <li>Collaborated to create multiple mobile apps and win hackathon awards</li>
+                            <li>Accomplished CAD designer</li>
+                            <li>2nd in CA Club Wrestling State Tournament (138 lbs)</li>
+                        </ul>
                     </p>
                 </div>
             </div>
@@ -89,10 +92,15 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>ViaSat Inc.</h3>
+                <h4>Software Engineering Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <ul>
+                      <li>Created the “Unified VIPSAM Portal” (UVP) over 10 weeks </li>
+                      <li>Created and hosted a Linux Virtual Machine using a Mongo database and NodeJS utilizing Python, JavaScript, and HTML/CSS</li>
+                      <li>UVP is a user-based web application that allows users to display fleets on a map, view plane trouble tickets, and generate data reports from real-time terminal data streams</li>
+                      <li>Users include ViaSat, Airforce One, and general aviation satellite communication operators</li>
+                    </ul>
                 </p>
             </div>
 
