about me v3 and other stuff

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        <ul>
+                        <ul style="text-align: right">
                             <li>Second year BS of Computer Science Major at California Polytechnic Institute, San Luis Obispo</li>
                             <li>Previous Software Engineering Intern at Viasat Inc. in Carlsbad, CA</li>
                             <li>Currently manage an online gaming business (Advancius) that uses cloud services and SQL databases to provide a multiplayer gaming experience to users.</li>
@@ -91,7 +91,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="June 2018 – September 2018">
                 <h3>ViaSat Inc.</h3>
                 <h4>Software Engineering Intern</h4>
                 <p>
@@ -104,19 +104,29 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2014 – Presest">
+                <h3>Self-Employed</h3>
+                <h4>Owner and Creator of Global Internet Gaming Service</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <ul>
+                      <li>Independent ongoing project with revenue, Website: www.advancius.net</li>
+                      <li>Over 50,000 users & over 1,000,000 website views  </li>
+                      <li>Develop and manage an online 24/7 internet gaming service that gives an enhanced multiplayer gaming experience to the game of Minecraft for thousands of players</li>
+                      <li>Service coded in Java and SQL with website coding in HTML/CSS and JavaScript</li>
+                      <li>Manage funds and profit of server and a staff of 20+ employees</li>
+                    </ul>
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2018 – September 2018">
+                <h3>Anticipate Ventures, LLC</h3>
+                <h4>Computer Aided Design Designer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    <ul>
+                      <li>12+ Hours/week</li>
+                      <li>Developed UV sanitation prototype models using CAD (Solidworks) </li>
+                      <li>Worked with a team to test and refine for commercial use</li>
+                    </ul>
                 </p>
             </div>
         </div>
