--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        <ul style="text-align: right">
-                            <li>Second year BS of Computer Science Major at California Polytechnic Institute, San Luis Obispo</li>
+                        <ul style="text-align: left">
+                            <li>Second year BS of Computer Science Major at California Polytechnic State University, San Luis Obispo</li>
                             <li>Previous Software Engineering Intern at Viasat Inc. in Carlsbad, CA</li>
                             <li>Currently manage an online gaming business (Advancius) that uses cloud services and SQL databases to provide a multiplayer gaming experience to users.</li>
                             <li>Collaborated to create multiple mobile apps and win hackathon awards</li>
@@ -136,28 +136,20 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <h3>California Polytechnic State University, San Luis Obispo, CA</h3>
+            <span class="education-date">Sept 2017 - june 2021</span>
             <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h4>Major GPA: 4.0 | Overall GPA: 3.59</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Dean’s Honors List (All Quarters Enrolled) 
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Computer Engineering Society Member
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Courses: Object Oriented Programming, Data Structures, Fundamentals of Computer
+                            Science, AP Computer Science, Calculus (I, II, III, IV), Linear Analysis
                 </li>
             </ul>
         </div>
@@ -208,32 +200,19 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+            <li>SQL</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Swift</li>
+            <li>Linux</li>
+            <li>MongoDB</li>
+            <li>Microsoft Office</li>
+            <li>GitHub</li>
+            <li>SolidWorks</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -241,7 +220,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/finn.childress@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
