--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 <h4>Owner and Creator of Global Internet Gaming Service</h4>
                 <p>
                     <ul>
-                      <li>Independent ongoing project with revenue, Website: www.advancius.net</li>
+                      <li>Independent ongoing project with revenue</li>
+                      <li>Website: <a href="https://www.advancius.net/">www.advancius.net</a></li>
                       <li>Over 50,000 users & over 1,000,000 website views  </li>
                       <li>Develop and manage an online 24/7 internet gaming service that gives an enhanced multiplayer gaming experience to the game of Minecraft for thousands of players</li>
                       <li>Service coded in Java and SQL with website coding in HTML/CSS and JavaScript</li>
