--- a/index.html
+++ b/index.html
@@ -165,31 +165,22 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/poly_pins.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Poly Pins (Placed in Hackathon)</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Poly Pins is an iOS application that helps users to find places around the Cal Poly Campus!<br>
+                            Demo Video: <a href="https://youtu.be/eR2O-xiVfNE">Click Here to go to YouTube</a> <br>
+                            Poly Pins uses augmented reality (AR) and Google Cloud Firebase (Cloud Database Hosting) to show the users various pins. <br>
+                            Each pin represents places that can be found on campus. <br>
+                            The user can filter the pins by type shown to the user by selecting the icons at the bottom of the screen. <br>
+                            The types of places to filter are: Food, Housing, Bathrooms, Recreation, Hydration, Buildings.<br>
+                            Created using XCode/Swift<br>
+                            3rd Place in SLO Hacks 2018
                         </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/VasanthSadhasivan/SLOHacks2018">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
