project text align

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Poly Pins (Placed in Hackathon)</h3>
-                        <p>
+                        <p style="text-align: left">
                             Poly Pins is an iOS application that helps users to find places around the Cal Poly Campus!<br>
-                            Demo Video: <a href="https://youtu.be/eR2O-xiVfNE">Click Here to go to YouTube</a> <br>
+                            Demo Video: <a href="https://youtu.be/eR2O-xiVfNE">YouTube Link</a> <br>
                             Poly Pins uses augmented reality (AR) and Google Cloud Firebase (Cloud Database Hosting) to show the users various pins. <br>
                             Each pin represents places that can be found on campus. <br>
                             The user can filter the pins by type shown to the user by selecting the icons at the bottom of the screen. <br>
