--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/poly_pins.png" />
+                        <img src="images/poly_pins.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
