--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <h2>Get in Touch</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/finn.childress@gmail.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
+                <input type="hidden" name="_subject" value="Contact request from your GitHub Portfolio" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
