--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
 					
 					<div style="display: inline-block;text-align: center;">
                 		<p>Second in Wrestling State Tournament</p>
-						<img src="images/Wrestling.jpg" style="width:300px;height:auto;"/>
+						<img src="images/Wrestling.JPG" style="width:300px;height:auto;"/>
 					</div>
 					<div style="display: inline-block;text-align: center;">
                 		<p>Summiting Mt. Baker, WA</p>
-						<img src="images/mt_thumbs_up.jpg" style="width:300px;height:auto;"/>
+						<img src="images/mt_thumbs_up.JPG" style="width:300px;height:auto;"/>
 					</div>
 					<div style="display: inline-block;text-align: center;">
                 		<p>Wakeboarding in Puget Sound</p>
-						<img src="images/wakeboard.jpg" style="width:300px;height:auto;"/>
+						<img src="images/wakeboard.JPG" style="width:300px;height:auto;"/>
 					</div>
 					<div style="display: inline-block;text-align: center;">
                 		<p>Defensive Soccer Player</p>
-						<img src="images/soccer.jpg" style="width:300px;height:auto;"/>
+						<img src="images/soccer.JPG" style="width:300px;height:auto;"/>
 					</div>
 					<div style="display: inline-block;text-align: center;">
                 		<p>Surfing in San Diego</p>
-						<img src="images/surfing.jpg" style="width:300px;height:auto;"/>
+						<img src="images/surfing.JPG" style="width:300px;height:auto;"/>
 					</div>
 
 				</div>
