--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2><br>
-                    <img src="images/finn.jpg" style="width:110px;height:auto;"/>
+                    <img src="images/finn.JPG" style="width:110px;height:auto;"/>
                 </div>
                 
                 <div class="col-md-8">
