--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <!-- End #lead -->
 
     <div id="about">
-        <div class="container">
+        <div class="container" style="margin-bottom: 0px;">
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2><br>
-                    <img src="images/finn.JPG" style="width:110px;height:auto;"/>
+                    <img src="images/finn.JPG" style="width:99px;height:auto;text-align: center"/>
                 </div>
                 
                 <div class="col-md-8">
@@ -124,14 +124,13 @@
 						}
 					</style>
                 </div>
-                <div id="aboutMePics" style="display: none">
+                <div id="aboutMePics" style="display: none; text-align: left;">
                 	<div style="display: inline-block;text-align: center;">
                 		<p>Internship at Viasat Inc.</p>
 						<img src="images/Viasat2.jpg" style="width:300px;height:auto;"/>
 					</div>
-					
 					<div style="display: inline-block;text-align: center;">
-                		<p>Second in Wrestling State Tournament</p>
+                		<p>Second in CA Wrestling State Tournament</p>
 						<img src="images/Wrestling.JPG" style="width:300px;height:auto;"/>
 					</div>
 					<div style="display: inline-block;text-align: center;">
