--- a/index.html
+++ b/index.html
@@ -161,17 +161,20 @@
             <h3>California Polytechnic State University, San Luis Obispo, CA</h3>
             <span class="education-date">Sept 2017 - June 2021</span>
             <h4>Bachelor of Science in Computer Science</h4>
-            <h4><b>Major GPA: 4.0 | Overall GPA: 3.59</b></h4>
+            <h4><b>Major GPA: 3.75 | Overall GPA: 3.52</b></h4>
             <ul>
                 <li>
-                    <b>Dean’s Honors List (All Quarters Enrolled)</b> 
+                    <b>Multiple Dean’s Honors List Awards</b> 
                 </li>
                 <li>
                     Computer Engineering Society Member
                 </li>
                 <li>
+                    Wrestling Club Member
+                </li>
+                <li>
                     Relevent Courses: <br>
-                    Object Oriented Programming, Data Structures, Fundamentals of Computer Science, AP Computer Science, Calculus (I, II, III, IV), Linear Analysis
+                    Computer Organization, Object Oriented Programming, Data Structures, Fundamentals of Computer Science, AP Computer Science, Calculus (I, II, III, IV), Linear Analysis
                 </li>
             </ul>
         </div>
@@ -227,8 +230,8 @@
                     <ul>
                       <li>Independent ongoing project with revenue</li>
                       <li><b>Website: <a href="https://www.advancius.net/" target="_blank">www.advancius.net</a></b></li>
-                      <li>Over 50,000 users & over 1,000,000 website views  </li>
-                      <li>Develop and manage an online 24/7 internet gaming service that gives an enhanced multiplayer gaming experience to the game of Minecraft for thousands of players</li>
+                      <li>Over 50,000 users & over 1,000,000 website views with more than $3000 in revenue thus far  </li>
+                      <li>Currently develop and manage an online 24/7 internet gaming service that gives an enhanced multiplayer gaming experience to the game of Minecraft for thousands of players</li>
                       <li>Service coded in Java and SQL with website coding in HTML/CSS and JavaScript</li>
                       <li>Manage funds and profit of server and a staff of 20+ employees</li>
                     </ul>
@@ -250,7 +253,7 @@
                 	<div style="display: inline-block;text-align: center;">
                 		<p>Advancius Trailer</p>
 						<iframe width="560" height="315"
-						src="https://www.youtube.com/embed/mTQENytz11I">
+						src="https://www.youtube.com/watch?v=biSp_bgvbo4">
 						</iframe>
 					</div>
 					<div style="display: inline-block;text-align: center;">
@@ -319,12 +322,32 @@
                         <p>
                             <ul style="text-align: left">
                       			<li>Poly Pins is an iOS application that helps users to find places around the Cal Poly Campus</li>
-                            	<li>Demo Video: <a href="https://youtu.be/eR2O-xiVfNE">YouTube Link</a> </li>
+                            	<li>Demo Video: <a target="_blank" href="https://youtu.be/eR2O-xiVfNE">YouTube Link</a> </li>
                             	<li>Poly Pins uses augmented reality (AR) and Google Cloud Firebase (Cloud Database Hosting) to show the users various pins that represent places that can be found on campus</li>
                             	<li>Created using XCode/Swift</li>
                             	<li>3rd Place in SLO Hacks 2018</li>
                         </p>
-                        <a href="https://github.com/VasanthSadhasivan/SLOHacks2018">View Project</a>
+                        <a target="_blank" href="https://github.com/VasanthSadhasivan/SLOHacks2018">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <div class="project shadow-large">
+                    <div class="project-image" style="border: 1px solid black;">
+                        <img src="images/nudge-icon.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Nudge</h3>
+                        <p>
+                            <ul style="text-align: left">
+                      			<li>Nudge is a React Native application that decreases the effects of Narcolepsy for users</li>
+                            	<li>Demo Video: <a target="_blank" href="https://www.youtube.com/watch?v=Y_tztvsGIHw">YouTube Link</a> </li>
+                            	<li>Nudge has a crowdsourced to-do list page of tips and tricks from other people with narcolepsy</li>
+                            	<li>Nudge also provides users with a graph of “sleepiness” trends created from machine learning during the day/sleepiness predictiveness and keeps track of daily activities to determine a graph of thier sleep patterns</li>
+                            	<li>Created using React Native and Machine Learning with a Firebase database (Real-time Cloud Storage)</li>
+                        </p>
+                        <a target="_blank" href="https://github.com/bfkwong/narcolepsy">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -342,6 +365,7 @@
             <li>JavaScript</li>
             <li>SQL</li>
             <li>Node.js</li>
+            <li>React Native</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Swift</li>
@@ -349,6 +373,8 @@
             <li>MongoDB</li>
             <li>Microsoft Office</li>
             <li>GitHub</li>
+            <li>iOS/Android Applications</li>
+            <li>Full Stack Web Development</li>
             <li>SolidWorks</li>
         </ul>
     </div>
@@ -373,7 +399,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 Finn Childress
+                        Copyright &copy; 2019 Finn Childress
                     </p>
                 </div>
                 <div class="col-sm-2 top">
