Updated from Winter Quarter

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
             <h3>California Polytechnic State University, San Luis Obispo, CA</h3>
             <span class="education-date">Sept 2017 - June 2021</span>
             <h4>Bachelor of Science in Computer Science</h4>
-            <h4><b>Major GPA: 3.75 | Overall GPA: 3.52</b></h4>
+            <h4><b>Major GPA: 3.66 | Overall GPA: 3.58</b></h4>
             <ul>
                 <li>
-                    <b>Multiple Dean’s Honors List Awards</b> 
+                    <b>Multiple (4) Dean’s Honors List Awards</b> 
                 </li>
                 <li>
                     Computer Engineering Society Member
@@ -174,7 +174,7 @@
                 </li>
                 <li>
                     Relevent Courses: <br>
-                    Computer Organization, Object Oriented Programming, Data Structures, Fundamentals of Computer Science, AP Computer Science, Calculus (I, II, III, IV), Linear Analysis
+                    Systems Programing, Computer Organization, Object Oriented Programming, Data Structures, Fundamentals of Computer Science, AP Computer Science, Calculus (I, II, III, IV), Linear Analysis
                 </li>
             </ul>
         </div>
