--- a/advancius/index.html
+++ b/advancius/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="MyServer, MyServer.com, Minecraft Server, Minecraft, Fun, Play, Portal, Website, Official">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="./css/stylesheet.css">
 	<script src="https://leonardosnt.github.io/mc-player-counter/dist/mc-player-counter.min.js"></script>
 </head>
 <body>
@@ -47,6 +47,6 @@
 
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/firefly.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<script src="./js/main.js" type="text/javascript"></script>
 </body>
 </html>
