add target blank to apply

--- a/apply.html
+++ b/apply.html
@@ -53,7 +53,7 @@
 	</ul>
 	<hr />
 	<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Conducting an interview with a promising Mod candidate or talking to senior staff members about promoting a Jr team member</span></strong></em></span></p>
-	<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/staffmanagerapp'" class="btn success">Apply</button></div>
+	<div class="centered"><button type="button" target="_blank" onclick="window.location.href='https://www.advancius.net/staffmanagerapp'" class="btn success">Apply</button></div>
 	</div>
 </body>
 
