--- a/apply.html
+++ b/apply.html
@@ -3,15 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta content="Default page" name="description">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-    <style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<style>
 	.btn {
 		border: none;
 		background-color: inherit;
@@ -22,6 +18,7 @@
 	}
 
 	/* Green */
+
 	.success {
 		color: #4CAF50;
 		border: solid #4CAF50;
@@ -34,27 +31,193 @@
 	.centered {
 		text-align: center;
 	}
+	.column {
+	  float: left;
+	  width: 327px;
+	}
+	.centerimg {
+	  display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+	  width: 50%;
+	}
+	
+	
 	</style>
 </head>
 
 <body>
 
-<div class="empty-account-page">
-    <div style="background-color: white; padding: 10px; border: solid #ffaa00;">
-	<h1 style="text-align: center;"><span style="color: #ffaa00;"><strong>Staff Manager</strong></span></h1>
-	<hr />
-	<ul>
-	<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Reviews all staff applications</span></li>
-	<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Conducts interviews with potential new staff</span></li>
-	<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Evaluates the staff team for potential mentors</span></li>
-	<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Oversees the behavior and work quality of all staff members</span></li>
-	<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Handles issues between other staff members</span></li>
-	<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Determines if a staff member should be promoted or demoted</span></li>
-	</ul>
-	<hr />
-	<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Conducting an interview with a promising Mod candidate or talking to senior staff members about promoting a Jr team member</span></strong></em></span></p>
-	<div class="centered"><button type="button" onclick=" window.open('https://www.advancius.net/staffmanagerapp','_blank')" class="btn success">Apply</button></div>
+<nav class="navbar navbar-expand-lg navbar-inverse">
+  <div class="container-fluid">
+	<a class="navbar-brand">
+	  <img style="width: 15%; height: auto;" src="https://s3.amazonaws.com/files.enjin.com/1554591/site_logo/avatar.png" alt="">
+	</a>
+    <div class="navbar-header">
+      <a class="navbar-brand" >Apply for Advancius Network Staff</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a target="_blank" href="https://www.advancius.net/">Home</a></li>
+      <li><a target="_blank" href="https://www.advancius.net/shop">Store</a></li>
+      <li><a target="_blank" href="http://discord.advancius.net/">Discord</a></li>
+      <li><a target="_blank" href="https://www.advancius.net/vote">Vote</a></li>
+    </ul>
+  </div>
+</nav>
+
+
+
+
+<div style="margin: 10px; width: 1000px" >
+	<div class="column">
+
+		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #f24e4e;">
+			<h1 style="text-align: center;"><span style="color: #f24e4e;"><strong>Moderator</strong></span></h1>
+			<hr />
+			<ul>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Monitors and manages players in-game</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Monitors and manages the in-game chat</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Punishes rule breaking in-game</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Monitors the discord chat for rule breaking</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Handles punishment appeals</span></li>
+			</ul>
+			<hr />
+			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Banning a player for advertising or investigating a hacker claim</span></strong></em></span></p>
+			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/modapp'" class="btn success">Apply</button></div>
+		</div>
+
+		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #55ff55;">
+			<h1 style="text-align: center;"><strong><span style="color: #55ff55;">Builder</span></strong></h1>
+			<hr />
+			<ul>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Builds and updates lobbies </span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Builds and updates arenas</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Updates all server builds for seasonal events</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Helps players with their builds if available</span></li>
+			</ul>
+			<hr />
+			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;Building a new spleef map or updating a lobby to fit a holiday theme</em></span></p>
+			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/builderapp'" class="btn success">Apply</button></div>
+		</div>
+
+		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #b81cb8;">
+			<h1 style="text-align: center;"><strong><span style="color: #b81cb8;">Social Media</span></strong></h1>
+			<hr />
+			<p style="text-align: center;"><strong><span style="font-size: 12pt;">An individual can be multiple social media roles</span></strong></p>
+			<hr />
+			<ul>
+			<li style="font-weight: 400;"><span style="font-size: 12pt;">The roles for social media currently:</span><br />
+			<ul>
+			<li style="font-weight: 400;"><span style="font-size: 12pt;">YouTuber</span></li>
+			<li style="font-weight: 400;"><span style="font-size: 12pt;">Streamer</span></li>
+			<li style="font-weight: 400;"><span style="font-size: 12pt;">Partner</span></li>
+			</ul>
+			</li>
+			<li style="font-weight: 400;"><span style="font-size: 12pt;">More information about each role and their respective requirements can be found in the application</span></li>
+			</ul>
+			<hr />
+			<p style="text-align: center;"></p>
+			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/socialmediaapplication'" class="btn success">Apply</button></div>
+		</div>
+
+
 	</div>
+
+
+
+
+	<div class="column" >
+		<div style="background-color: white; margin: 10px; margin-bottom: 30px; padding: 10px; border: solid black;">
+			<p style="text-align: center;"><span style="text-decoration: underline;"><em><span style="font-size: 16pt;"><strong>Players can apply and be a part of more than one team.</strong></span></em></span></p>
+			<p style="text-align: center;"><strong><span style="font-size: 14pt;">Guide to writing applications:</span></strong></p>
+			<p style="text-align: center;"><strong><span style="font-size: 14pt;"><a href="https://bit.ly/2wnaYpK">https://bit.ly/2wnaYpK</a>&nbsp;</span></strong></p>
+			<p style="text-align: center;"><strong><span style="font-size: 14pt;">View your application(s) here:</span></strong></p>
+			<p style="text-align: center;"><strong><span style="font-size: 14pt;"><a href="https://tinyurl.com/myenjinapps">https://tinyurl.com/myenjinapps</a>&nbsp;</span></strong></p>
+		</div>
+
+		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #098585;">
+			<h1 style="text-align: center;"><span style="color: #098585;"><strong>Developer</strong></span></h1>
+			<hr />
+			<p style="text-align: center;"><strong><span style="font-size: 12pt;">Depending on interest, Developers can focus on coding/console or only in-game (or both!)</span></strong></p>
+			<p style="text-align: center;"><strong><span style="font-size: 12pt;">This choice can also be changed after the application is accepted.</span></strong></p>
+			<hr />
+			<ul>
+			<li style="font-weight: 400;"><span style="text-decoration: underline;"><span style="font-weight: 400; font-size: 12pt;">(Option 1) Coding/Console Focus:</span></span></li>
+			<ul>
+			<li><span style="font-size: 12pt;">Codes new plugins</span></li>
+			<li><span style="font-size: 12pt;">Configures downloaded plugins</span></li>
+			<li><span style="font-size: 12pt;">Updates plugins to the current server version</span></li>
+			<li><span style="font-size: 12pt;">Fixes plugin bugs through code or plugin configuration files</span></li>
+			<li><span style="font-size: 12pt;">Adds new features to existing plugins</span></li>
+			</ul>
+			<li><span style="text-decoration: underline; font-size: 12pt;">(Option 2) In-Game Focus:</span></li>
+			<ul>
+			<li><span style="font-size: 12pt;">Fixes in-game plugin or redstone issues</span></li>
+			<li><span style="font-size: 12pt;">Tests plugins before implementation</span></li>
+			<li><span style="font-size: 12pt;">Fixing individual player account issues</span></li>
+			<li><span style="font-size: 12pt;">Configuring plugins in-game</span></li>
+			<li><span style="font-size: 12pt;">Fixes issues caused by hackers, griefers, or bugs</span></li>
+			</ul>
+			<li><span style="text-decoration: underline; font-size: 12pt;">(Option 3) Both</span></li>
+			</ul>
+			<hr />
+			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Examples: Implementing a new&nbsp;minigame<strong><span style="font-weight: 400;">,&nbsp;setting up the world/regions/holograms for a new minigame, configuring a plugin from online, bug fixing, or coding a new plugin</span></strong></em></span></p>
+			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/devapp'" class="btn success">Apply</button></div>
+		</div>
+
+
+	</div>
+
+
+
+
+	<div class="column">
+		<div  style="background-color: white; margin: 10px; padding: 10px; border: solid #43c4c4;">
+			<h1 style="text-align: center;"><span style="color: #43c4c4;"><strong>Community Manager</strong></span></h1>
+			<hr />
+			<ul>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Manages the Discord by interacting with players and answering questions</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Manages the forums by interacting with players and answering questions</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Hosts and organizes server events</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Collects community feedback from the forums, Discord server, and in-game and relays sentiments to the rest of staff team</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Manages all social media accounts </span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Manages server marketing/advertising</span></li>
+			</ul>
+			<hr />
+			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Hosting a social media giveaway or relaying to the rest of the staff that a lot of the community wants to add a specific new minigame </span></strong></em></span></p>
+			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/communitymanagerapp'" class="btn success">Apply</button></div>
+		</div>
+
+		<div style="background-color: white; margin: 10px; padding: 10px; border: solid #ffaa00;">
+			<h1 style="text-align: center;"><span style="color: #ffaa00;"><strong>Staff Manager</strong></span></h1>
+			<hr />
+			<ul>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Reviews all staff applications</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Conducts interviews with potential new staff</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Evaluates the staff team for potential mentors</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Oversees the behavior and work quality of all staff members</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Handles issues between other staff members</span></li>
+			<li style="font-weight: 400;"><span style="font-weight: 400; font-size: 12pt;">Determines if a staff member should be promoted or demoted</span></li>
+			</ul>
+			<hr />
+			<p style="text-align: center;"><span style="font-size: 13pt;"><em>Example:&nbsp;<strong><span style="font-weight: 400;">Conducting an interview with a promising Mod candidate or talking to senior staff members about promoting a Jr team member</span></strong></em></span></p>
+			<div class="centered"><button type="button" onclick="window.location.href='https://www.advancius.net/staffmanagerapp'" class="btn success">Apply</button></div>
+		</div>
+
+	</div>
+
+
+	
+	
+
+	
+	
+	
+
+	
+
+</div>
+
 </body>
 
 </html>
